fixed the footer overlapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,6 @@ footer {
 .flex-catagories {
   display: flex;
   flex-direction: column;
-  height: 70px;
 }
 
 .catagories-head {
